# electrical

./: .gitignore  CMakeLists.txt  LICENSE  README.md
C-AN/CBiscuitAreaNetwork/: CBiscuitAreaNetwork.kicad_pro
assets/boards/: board.json  test.json
assets/components/: cache.json  test.json
assets/components/1280/: test.json
assets/connectors/: cache.json
assets/connectors/1280/: bare.json  test-conn.json
board/: board.sch
cli/: CMakeLists.txt  args.cpp  args.hpp  cmd.cpp  cmd.hpp  main.cpp
core/: CMakeLists.txt  component.cpp  component.hpp  geom.cpp  geom.hpp  lib.cpp  lib.hpp  resource.cpp  resource.hpp  ser.hpp  store.hpp  unit.cpp  unit.hpp  wire.cpp  wire.hpp
core/ser/: ser.hpp  store.cpp  store.hpp
core/util/: hash.hpp  log.cpp  log.hpp
gui/: CMakeLists.txt  main.cpp  window.cpp  window.hpp
gui/res/: resources.xml
gui/res/ui/: toolbar.xml
lib/: CMakeLists.txt  buildopts-e1280.h.in  component.cpp  component.hpp  currency.cpp  currency.hpp  data.cpp  data.hpp  geom.cpp  geom.hpp  lib.cpp  lib.hpp  unit.cpp  unit.hpp  wire.cpp  wire.hpp
lib/ser/: ser.hpp  store.cpp  store.hpp
lib/util/: Optional.hpp  freelist.cpp  freelist.hpp  hash.hpp  log.cpp  log.hpp  optional.cpp  optional.hpp  optional_internal.hpp  singlevec.cpp  singlevec.hpp  stackvec.hpp
